--- a/style.css
+++ b/style.css
@@ -28,11 +28,14 @@ body {
 @keyframes pulsieren {
     0% {
         transform: scale(1);
+        opacity: 1;
     }
     50% {
         transform: scale(1.1);
+        opacity: 0.5;
     }
     100% {
         transform: scale(1);
+        opacity: 0;
     }
 }
