--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 
 /* Bild-Styling und Animation */
 .image-container img {
-    max-width: 100%;
-    height: auto;
+    max-width: 50px;
+    height: 50px;
     animation: pulsieren 2s infinite;
 }
 
