--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 /* Bild-Styling und Animation */
 .image-container img {
-    max-width: 50px;
+    width: 50px;
     height: 50px;
     animation: pulsieren 2s infinite;
 }
