--- a/style.css
+++ b/style.css
@@ -1,41 +1,47 @@
-/* Allgemeine Stile für den Body */
-body {
+* {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    height: 100vh;
-    background-color: #f0f0f0;
+    box-sizing: border-box;
 }
 
-/* Container für das Bild */
-.image-container {
-    margin-top: 20px; /* Abstand vom oberen Rand */
+body {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: rgb(85, 85, 85);
 }
 
-/* Bild-Styling und Animation */
-.image-container img {
-    width: 50px;
-    height: 50px;
-    animation: pulsieren 2s infinite;
+.avatar_bild {
+    width: 200px;
+    height: 200px;
+    z-index: 1;
+    position: relative;
 }
 
-/* Pulsierende Animation */
-@keyframes pulsieren {
-    0% {
+.container {
+    position: relative;
+}
+
+.pulse1,
+.pulse2,
+.pulse3 {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    z-index: 0;
+    background-color: rgb(75, 75, 75);
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    from {
         transform: scale(1);
         opacity: 1;
     }
-    50% {
-        transform: scale(1.1);
-        opacity: 0.5;
-    }
-    100% {
-        transform: scale(1);
+
+    to {
+        transform: scale(1.5);
         opacity: 0;
     }
 }
