--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     height: 200px;
     z-index: 1;
     position: relative;
+    border-radius: 50%;
 }
 
 .container {
@@ -31,6 +32,7 @@ body {
     height: 200px;
     z-index: 0;
     background-color: rgb(75, 75, 75);
+    border-radius: 50%;
     animation: pulse 2s infinite;
 }
 
